js/js.translator/testData/incremental/invalidation/jsName/lib1/lib.0.kt
interface Foo {
    fun foo(): String
    fun default(): String = "Default"
}

open class Bar {
    open fun bar(): String = "Bar"
}